more pics, and style updates

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -110,7 +110,7 @@ html, body {
 }
 
 #accomodationscontent {
-  background: url(/pics/mountain2.jpg) no-repeat center center fixed; 
+  background: url(/pics/livermore.jpg) no-repeat center center fixed; 
   display: table;
   height: 800px;
   position: relative;
