more pics, added masonry lightbox image gallery

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -126,7 +126,7 @@ html, body {
 }
 
 #activitiescontent {
-  background: url(/pics/mountain2.jpg) no-repeat center center fixed; 
+  background: url(/pics/sfbridge.jpg) no-repeat center center fixed; 
   display: table;
   height: 800px;
   position: relative;
