initial prod push

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -97,9 +97,9 @@ html, body {
   background-size: cover;
 }
 
-#agendacontent .panel {
-  opacity: 0.85;
-}
+// #agendacontent .panel {
+//   opacity: 0.85;
+// }
 
 #map_header {
   background-color: #e74c3c;
