--- a/app/css/app.css
+++ b/app/css/app.css
@@ -43,6 +43,8 @@ html, body {
   height: 75%;
   position: relative;
   width: 100%;
+  min-width: 100%;
+  min-height: 75%;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -75,6 +77,8 @@ html, body {
   height: 400px;
   position: relative;
   width: 100%;
+  min-width: 100%;
+  min-height: 100%;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -91,6 +95,8 @@ html, body {
   height: 800px;
   position: relative;
   width: 100%;
+  min-width: 100%;
+  min-height: 100%;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -119,6 +125,8 @@ html, body {
   height: 800px;
   position: relative;
   width: 100%;
+  min-width: 100%;
+  min-height: 100%;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -135,6 +143,8 @@ html, body {
   height: 800px;
   position: relative;
   width: 100%;
+  min-width: 100%;
+  min-height: 100%;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -151,6 +161,8 @@ html, body {
   height: 800px;
   position: relative;
   width: 100%;
+  min-width: 100%;
+  min-height: 100%;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -167,6 +179,8 @@ html, body {
   height: 800px;
   position: relative;
   width: 100%;
+  min-width: 100%;
+  min-height: 100%;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -177,17 +191,19 @@ html, body {
   background-color: #464545;
 }
 
-#photoscontent {
-  // background: url(/pics/mountain2.jpg) no-repeat center center fixed; 
-  display: table;
-  height: 800px;
-  position: relative;
-  width: 100%;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
+// #photoscontent {
+//   // background: url(/pics/mountain2.jpg) no-repeat center center fixed; 
+//   display: table;
+//   height: 800px;
+//   position: relative;
+//   width: 100%;
+//   min-width: 100%;
+//   min-height: 100%;
+//   -webkit-background-size: cover;
+//   -moz-background-size: cover;
+//   -o-background-size: cover;
+//   background-size: cover;
+// }
 
 footer {
   padding: 20px 0;
