--- a/app/css/app.css
+++ b/app/css/app.css
@@ -38,12 +38,12 @@ html, body {
 
 /* additional sections */
 #home {
-  background: url(/pics/mountains.PNG) no-repeat center center fixed; 
+  background: url(/pics/mountains.PNG) no-repeat center center fixed;
+  background-attached:fixed;
   display: table;
   height: 75%;
   position: relative;
   width: 100%;
-  min-height: 75%;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -76,7 +76,6 @@ html, body {
   height: 400px;
   position: relative;
   width: 100%;
-  min-height: 100%;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -93,7 +92,6 @@ html, body {
   height: 800px;
   position: relative;
   width: 100%;
-  min-height: 100%;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -122,7 +120,6 @@ html, body {
   height: 800px;
   position: relative;
   width: 100%;
-  min-height: 100%;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -139,7 +136,6 @@ html, body {
   height: 800px;
   position: relative;
   width: 100%;
-  min-height: 100%;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -156,7 +152,6 @@ html, body {
   height: 800px;
   position: relative;
   width: 100%;
-  min-height: 100%;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -173,7 +168,6 @@ html, body {
   height: 800px;
   position: relative;
   width: 100%;
-  min-height: 100%;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -183,6 +177,8 @@ html, body {
 #photos {
   background-color: #464545;
 }
+
+
 
 footer {
   padding: 20px 0;
