couple of small updates to general info

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -115,7 +115,7 @@ html, body {
 }
 
 #accomodationscontent {
-  background: url(/pics/livermore.jpg) no-repeat center center fixed; 
+  background: url(/pics/livermorewinery.jpg) no-repeat center center fixed; 
   display: table;
   height: 800px;
   position: relative;
